# powerpack

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: build.yaml
ci/: publish-workspace.sh
cli/: Cargo.toml
cli/src/: alfred.rs  cargo.rs  main.rs  main.rs.template  main.template.rs
cli/tests/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: alfred.rs  cargo.rs  main.rs  main.template.rs
crates/detach/: Cargo.toml
crates/detach/src/: lib.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
examples/hello-alfred/: .gitignore  Cargo.toml  README.md
examples/hello-alfred/src/: main.rs
examples/hello-alfred/workflow/: info.plist
src/: env.rs  lib.rs  main.compile_error.rs
tests/: basic.rs
tests/testdata/: all.golden  smoke.golden
