[package]
name = "powerpack"
version = "0.4.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "⚡ Supercharge your Alfred workflows by building them in Rust!"
readme = "README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
powerpack-detach = { version = "0.4.2", path = "crates/detach", optional = true }
powerpack-env = { version = "0.4.2", path = "crates/env", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

[dev-dependencies]
goldie = "0.2.0"

[features]
default = ["env"]
detach = ["powerpack-detach"]
env = ["powerpack-env"]

[workspace]
members = ["crates/*"]
