[workspace]
members = ["crates/*", "examples/*"]

[package]
name = "powerpack"
version = "0.5.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "⚡ Supercharge your Alfred workflows by building them in Rust!"
readme = "README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
powerpack-detach = { version = "0.5.0", path = "crates/detach", optional = true }
powerpack-env = { version = "0.5.0", path = "crates/env", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
goldie = "0.4.3"

[features]
default = ["env"]
detach = ["dep:powerpack-detach"]
env = ["dep:powerpack-env"]

[profile.release]
strip = true
