[package]
name = "powerpack-cli"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "🎩 Supercharge your Alfred workflows by building them in Rust!"
readme = "../README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.39"
atty = "0.2.14"
cargo_metadata = "0.13.1"
casual = "0.2.0"
clap = "3.0.0-beta.2"
home = "0.5.3"
indexmap = "1.6.2"
peter = "0.2.1"
plist = "1.1.0"
toml_edit = "0.2.0"
uuid = { version = "0.8.2", features = ["v4"] }
zip = { version = "0.5.11", features = ["deflate-zlib", "time"], default-features = false }

[dev-dependencies]
powerpack = { path = ".." }

[[bin]]
name = "powerpack"
path = "src/main.rs"
