[package]
name = "powerpack-cli"
version = "0.5.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "⚡ Supercharge your Alfred workflows by building them in Rust!"
readme = "README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.78"
cargo_metadata = "0.18.1"
casual = "0.2.0"
clap = { version = "4.4.12", features = ["derive"] }
home = "0.5.9"
peter = "0.2.1"
plist = "1.6.0"
toml_edit = "0.21.0"
uuid = { version = "1.6.1", features = ["v4"] }
zip = { version = "0.6.6", features = ["deflate-zlib", "time"], default-features = false }

[dev-dependencies]
powerpack = { path = "../.." }

[[bin]]
name = "powerpack"
path = "src/main.rs"

[profile.release]
strip = true
