[package]
name = "powerpack-detach"
version = "0.4.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "⚡ Detach a background process from your Alfred workflow."
readme = "README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
libc = "0.2.117"
log = { version = "0.4.14", features = ["std"] }
