[package]
name = "powerpack-detach"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "⚡ Detach a background process from your Alfred workflow"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libc = "0.2.151"
log = { version = "0.4.20", features = ["std"] }
