[package]
name = "powerpack-env"
version = "0.4.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "⚡ Useful environment variables in Alfred workflows."
readme = "README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]
