[package]
name = "powerpack-logger"
version = "0.4.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "⚡ A simple logger for Alfred workflows."
readme = "README.md"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.12.0"
